<resources>
    <string name="app_name">DrinkBiofeedback2.0</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_volume">Quantity [mL]:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Drink Biofeedback App</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <!-- Menu hamburger items-->
    <string name="BlueConn">Connect to Smart Glass</string>
    <string name="prova">prova</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_refresh">Refresh</string>

    <string name="Button1">Save</string>
    <string name="Button2">History</string>
    <!--<string name="Clear_button">Clear_button</string>-->
    <string name="TextForButton">Manage your data with the following buttons:</string>
    <string name="clear">clear</string>
    <string name="cleared_message">All your data is gone forever.</string>
    <string name="sleep_tracker_fragment">gatt_serviceXfragment</string>
    <string name="sleep_quality_fragment">datastore_fragment</string>

    <string name="title"><![CDATA[<h3>HERE IS YOUR VOLUME DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="storedFragment">storedFragment</string>
    <string name="title_activity_data_store">DataStoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="id_label">Id</string>
    <string name="date_label">Dates</string>
    <string name="time_label">Time</string>
    <string name="value_label">Quantity</string>
    <string name="clear2">Clear database</string>
</resources>